Add correction to palindrome function

--- a/exercises/conditionals.ipynb
+++ b/exercises/conditionals.ipynb
@@ -10,15 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "care is not a palindrome\n",
-      "None\n"
+      "madam is a palindrome\n"
      ]
     }
    ],
@@ -26,10 +25,10 @@
     "word = str(input(\"Enter word:\"))\n",
     "def is_palindrome(word):\n",
     "    if word == word[::-1]:\n",
-    "        print(f\"{word}is a palindrome\")\n",
+    "        print(f\"{word} is a palindrome\")\n",
     "    else:\n",
     "        print(f\"{word} is not a palindrome\")\n",
-    "print(is_palindrome(words))        "
+    "palindrome = is_palindrome(word)   \n"
    ]
   },
   {
