--- a/exercises/error_handling.ipynb
+++ b/exercises/error_handling.ipynb
@@ -10,10 +10,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sum of integers for ['2', '1', '4', '5', '12', '52', '63', '42', '14', '62'] is 257\n"
+     ]
+    }
+   ],
+   "source": [
+    "list = [\"2\",\"1\",\"4\",\"5\",\"12\",\"52\",\"63\",\"42\",\"14\",\"62\"]\n",
+    "def int_sum(list):\n",
+    "    sum = 0\n",
+    "    for i in list:\n",
+    "        try:\n",
+    "            sum+=int(i)\n",
+    "        except ValueError:\n",
+    "            pass\n",
+    "    return sum\n",
+    "\n",
+    "list_sum = int_sum(list)\n",
+    "print(f\"The sum of integers for {list} is {list_sum}\")          \n",
+    "\n"
+   ]
   },
   {
    "attachments": {},
@@ -25,10 +47,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1', '5', '50', 'string']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def open_file(x):\n",
+    "    try:\n",
+    "        open(filename,\"r\")\n",
+    "        contents = x.read()\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"Error: {filename} not found!\")\n",
+    "    return None\n",
+    "print(x)"
+   ]
   },
   {
    "attachments": {},
@@ -70,10 +110,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The largest integer in ['1', '5', '50', 'string'] is string\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [\"1\", \"5\", \"50\", \"string\"]\n",
+    "def largest_num(x):\n",
+    "    try:\n",
+    "        for i in x:            \n",
+    "            return max(x)\n",
+    "    except ValueError:\n",
+    "            print(f\"Element is not an integer!\")\n",
+    "            return None\n",
+    "print(f\"The largest integer in {x} is {largest_num(x)}\")    \n"
+   ]
   }
  ],
  "metadata": {
@@ -83,13 +141,21 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.9"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.16"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f7a5be651532581cb44625d52e18aa1d390cab54bc6b51099d8c30bea9b68219"
+    "hash": "9ac03a0a6051494cc606d484d27d20fce22fb7b4d169f583271e11d5ba46a56e"
    }
   }
  },
