--- a/exercises/conditionals.ipynb
+++ b/exercises/conditionals.ipynb
@@ -22,7 +22,11 @@
     }
    ],
    "source": [
+    "# Requesting input from user\n",
     "word = str(input(\"Enter word:\"))\n",
+    "\"\"\"\n",
+    "Function to check whether the word is a palindrome\n",
+    "\"\"\"\n",
     "def is_palindrome(word):\n",
     "    if word == word[::-1]:\n",
     "        print(f\"{word} is a palindrome\")\n",
@@ -103,10 +107,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The largest number divisible by 3 is 72\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [1,3,2,4,5,9,72,13,16]\n",
+    "def largest_bythree(nums):\n",
+    "    largest_num = 0\n",
+    "    for num in nums:\n",
+    "        if num % 3 == 0 and num > largest_num:\n",
+    "            largest_num = num\n",
+    "    return largest_num            \n",
+    "largest_numb = largest_bythree(nums)\n",
+    "print(f\"The largest number divisible by 3 is {largest_numb}\")"
+   ]
   },
   {
    "attachments": {},
