Add comments and description

--- a/exercises/error_handling.ipynb
+++ b/exercises/error_handling.ipynb
@@ -23,6 +23,11 @@
    ],
    "source": [
     "list = [\"2\",\"1\",\"4\",\"5\",\"12\",\"52\",\"63\",\"42\",\"14\",\"62\"]\n",
+    "\n",
+    "\"\"\"\n",
+    "Function that returns the sum of a list of integers\n",
+    "\"\"\"\n",
+    "\n",
     "def int_sum(list):\n",
     "    sum = 0\n",
     "    for i in list:\n",
@@ -59,6 +64,9 @@
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "Function that takes the filename as argument and opens the file\n",
+    "\"\"\"\n",
     "\n",
     "def open_file(x):\n",
     "    try:\n",
@@ -123,6 +131,11 @@
    ],
    "source": [
     "x = [\"1\", \"5\", \"50\", \"string\"]\n",
+    "\n",
+    "\"\"\"\n",
+    "Function that returns the largest integer from a list\n",
+    "\"\"\"\n",
+    "\n",
     "def largest_num(x):\n",
     "    try:\n",
     "        for i in x:            \n",
