--- a/exercises/conditionals.ipynb
+++ b/exercises/conditionals.ipynb
@@ -90,7 +90,9 @@
     }
    ],
    "source": [
+    "# Requesting input from user\n",
     "age = int(input(\"Enter age:\"))\n",
+    "# Checking conditions for approval\n",
     "if age > 18:\n",
     "    print(\"You are old enough to vote\")\n",
     "else:\n",
@@ -120,6 +122,10 @@
    ],
    "source": [
     "nums = [1,3,2,4,5,9,72,13,16]\n",
+    "\"\"\"\n",
+    "Function to return the largest integer divisible by 3\n",
+    "\"\"\"\n",
+    "\n",
     "def largest_bythree(nums):\n",
     "    largest_num = 0\n",
     "    for num in nums:\n",
@@ -152,7 +158,12 @@
     }
    ],
    "source": [
+    "# Requesting input from user\n",
     "x = int(input(\"Enter number:\"))\n",
+    "\n",
+    "\"\"\"\n",
+    "Fuction to check whether a number is prime\n",
+    "\"\"\"\n",
     "def is_prime(x):\n",
     "    if n < 2:\n",
     "        return False\n",
