--- a/exercises/error_handling.ipynb
+++ b/exercises/error_handling.ipynb
@@ -166,41 +166,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'>' not supported between instances of 'str' and 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[80], line 18\u001b[0m\n\u001b[1;32m     14\u001b[0m             \u001b[39mpass\u001b[39;00m\n\u001b[1;32m     15\u001b[0m     \u001b[39mreturn\u001b[39;00m largest_num\n\u001b[0;32m---> 18\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mThe largest integer in \u001b[39m\u001b[39m{\u001b[39;00mx\u001b[39m}\u001b[39;00m\u001b[39m is \u001b[39m\u001b[39m{\u001b[39;00mlargest_num(x)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)    \n",
-      "Cell \u001b[0;32mIn[71], line 12\u001b[0m, in \u001b[0;36mlargest_num\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m x:\n\u001b[1;32m     11\u001b[0m         \u001b[39mif\u001b[39;00m \u001b[39mint\u001b[39m(i) \u001b[39mand\u001b[39;00m \u001b[39mint\u001b[39m(i) \u001b[39m>\u001b[39m largest_num:\n\u001b[0;32m---> 12\u001b[0m             \u001b[39mreturn\u001b[39;00m \u001b[39mmax\u001b[39;49m(x)\n\u001b[1;32m     13\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mValueError\u001b[39;00m:\n\u001b[1;32m     14\u001b[0m         \u001b[39mif\u001b[39;00m i \u001b[39m==\u001b[39m \u001b[39mstr\u001b[39m:\n",
-      "\u001b[0;31mTypeError\u001b[0m: '>' not supported between instances of 'str' and 'int'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The largest integer in [1, 5, 7, 23, 62, 155, 78, 50, 'string'] is 155\n"
      ]
     }
    ],
    "source": [
-    "x = [1,5,7,23,62,155,78,50,\"string\"]\n",
-    "\n",
-    "\"\"\"\n",
-    "Function that returns the largest integer from a list\n",
-    "\"\"\"\n",
+    "x = [1, 5, 7, 23, 62, 155, 78, 50, \"string\"]\n",
     "\n",
     "def get_largest_int(x):\n",
     "    largest_num = None\n",
     "    for num in x:\n",
-    "        try:\n",
-    "            if largest_num is None or num > largest_num:\n",
-    "                largest = num\n",
-    "        except ValueError:\n",
-    "            pass\n",
+    "        if isinstance(num, int) and (largest_num is None or num > largest_num):\n",
+    "            largest_num = num\n",
     "    return largest_num\n",
     "\n",
-    "\n",
-    "print(f\"The largest integer in {x} is {largest_num(x)}\")    \n"
+    "print(f\"The largest integer in {x} is {get_largest_int(x)}\")"
    ]
   }
  ],
