--- a/exercises/func_debugging.ipynb
+++ b/exercises/func_debugging.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
     "def find_duplicates(arr):\n",
     "    result = []\n",
     "    for i in range(len(arr)):\n",
-    "        for j in range(i+1, len(arr)):\n",
+    "        for j in range(i+1,len(arr)):\n",
     "            if arr[i] == arr[j]:\n",
     "                result.append(arr[i])\n",
     "    return result\n",
@@ -98,11 +98,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 3, 3]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "\"\"\" The issue is that the loop should iterate up to len(arr)-1 for i,\n",
+    "instead of up to len(arr). This is because in the inner loop, j already starts from i+1,\n",
+    " so there is no need to iterate over the last element again. \n",
+    "\"\"\"\n",
+    "\n",
+    "def find_duplicates(arr):\n",
+    "    result = []\n",
+    "    for i in range(len(arr)-1):\n",
+    "        for j in range(i+1,len(arr)):\n",
+    "            if arr[i] == arr[j]:\n",
+    "                result.append(arr[i])\n",
+    "    return result\n",
+    "\n",
+    "input_arr = [1, 2, 3, 4, 2, 3, 5, 6, 7, 3]\n",
+    "output = find_duplicates(input_arr)\n",
+    "print(output)"
    ]
   },
   {
@@ -115,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -125,8 +148,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[15], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdivide\u001b[39m(x, y):\n\u001b[1;32m      2\u001b[0m     \u001b[39mreturn\u001b[39;00m x\u001b[39m/\u001b[39my\n\u001b[0;32m----> 4\u001b[0m result \u001b[39m=\u001b[39m divide(\u001b[39m5\u001b[39;49m, \u001b[39m0\u001b[39;49m)\n\u001b[1;32m      5\u001b[0m \u001b[39mprint\u001b[39m(result)\n",
-      "Cell \u001b[0;32mIn[15], line 2\u001b[0m, in \u001b[0;36mdivide\u001b[0;34m(x, y)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdivide\u001b[39m(x, y):\n\u001b[0;32m----> 2\u001b[0m     \u001b[39mreturn\u001b[39;00m x\u001b[39m/\u001b[39;49my\n",
+      "Cell \u001b[0;32mIn[27], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdivide\u001b[39m(x, y):\n\u001b[1;32m      2\u001b[0m     \u001b[39mreturn\u001b[39;00m x\u001b[39m/\u001b[39my\n\u001b[0;32m----> 4\u001b[0m result \u001b[39m=\u001b[39m divide(\u001b[39m5\u001b[39;49m, \u001b[39m0\u001b[39;49m)\n\u001b[1;32m      5\u001b[0m \u001b[39mprint\u001b[39m(result)\n",
+      "Cell \u001b[0;32mIn[27], line 2\u001b[0m, in \u001b[0;36mdivide\u001b[0;34m(x, y)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdivide\u001b[39m(x, y):\n\u001b[0;32m----> 2\u001b[0m     \u001b[39mreturn\u001b[39;00m x\u001b[39m/\u001b[39;49my\n",
       "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
      ]
     }
@@ -206,9 +229,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "item1\n",
+      "item2\n",
+      "item3\n"
+     ]
+    }
+   ],
    "source": [
     "# your code here\n",
     "\n",
