--- a/exercises/project_euler_01.ipynb
+++ b/exercises/project_euler_01.ipynb
@@ -87,30 +87,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6857\n"
+      "36673063\n"
      ]
     }
    ],
    "source": [
-    "n = 600851475143\n",
-    "i = 2\n",
+    "n = 600851475143 # number to check\n",
+    "i = 2 # smallest prime number\n",
     "\n",
     "while i * i <= n:\n",
     "    while n % i == 0:\n",
-    "        n //= i\n",
+    "        n //= 2\n",
     "    i += 1\n",
     "\n",
-    "if n > 1:\n",
+    "if n > 1: # check to see if it is still a prime number\n",
     "    print(n)\n",
     "else:\n",
-    "    print(i - 1)"
+    "    print(i - 1)\n"
    ]
   },
   {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -137,15 +137,17 @@
     }
    ],
    "source": [
-    "largest_palindrome = 0\n",
+    "largest_palindrome = 0 # initialize largest_palindrome to 0\n",
     "\n",
+    "# Loop through all pairs of three-digit numbers (i and j)\n",
     "for i in range(100, 1000):\n",
     "    for j in range(100, 1000):\n",
-    "        product = i * j\n",
-    "        if str(product) == str(product)[::-1]:\n",
-    "            largest_palindrome = max(largest_palindrome, product)\n",
+    "        product = i * j # calculate the product of i and j\n",
+    "        if str(product) == str(product)[::-1]: # check if the product is a palindrome\n",
+    "            largest_palindrome = max(largest_palindrome, product) # update largest_palindrome if the product is larger\n",
     "\n",
-    "print(largest_palindrome)"
+    "# Print the largest palindrome\n",
+    "print(largest_palindrome)\n"
    ]
   },
   {
@@ -160,10 +162,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "232792560\n"
+     ]
+    }
+   ],
+   "source": [
+    "primes = [2,3,5,7,11,13,17,19] # prime factors of each number from 1 to 20\n",
+    "\n",
+    "prod = 1 # initialize product to 1\n",
+    "\n",
+    "# Loop through each prime factor\n",
+    "for p in primes:\n",
+    "    n = 2 # start with the second power of the prime factor\n",
+    "    prod *= p # multiply the product by the prime factor\n",
+    "    while (p**n < 21): # loop through powers of the prime factor up to 20\n",
+    "        prod *= p # multiply the product by the prime factor raised to the current power\n",
+    "        n += 1 # increment the power\n",
+    "\n",
+    "# Print the final product\n",
+    "print(prod)\n"
+   ]
   },
   {
    "attachments": {},
@@ -181,32 +206,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1472\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?\n",
-      "<>:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?\n",
-      "/tmp/ipykernel_1140/3622915206.py:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?\n",
-      "  return i == (10(10+1)(2*10+1))/6\n"
+     "ename": "TypeError",
+     "evalue": "'int' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[36], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m             \u001b[39msum\u001b[39m(i\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m)\n\u001b[1;32m      9\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39msum\u001b[39m \n\u001b[0;32m---> 10\u001b[0m result \u001b[39m=\u001b[39m sum_nat_100() \u001b[39m-\u001b[39m first_100()\n\u001b[1;32m     11\u001b[0m \u001b[39mprint\u001b[39m(result)           \n",
+      "Cell \u001b[0;32mIn[36], line 8\u001b[0m, in \u001b[0;36msum_nat_100\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[39msum\u001b[39m \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m      7\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m,\u001b[39m100\u001b[39m):\n\u001b[0;32m----> 8\u001b[0m     \u001b[39msum\u001b[39;49m(i\u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49m\u001b[39m2\u001b[39;49m)\n\u001b[1;32m      9\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39msum\u001b[39m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not callable"
      ]
     }
    ],
    "source": [
-    "def one_hundred_nat():\n",
-    "    for i in range(1,10):\n",
-    "        return i == (10(10+1)(2*10+1))/6\n",
-    "print(i)"
+    "def first_100_nat():\n",
+    "    first_100 = []\n",
+    "for i in range(1, 100):\n",
+    "    i**2\n",
+    "def sum_nat_100():\n",
+    "    sum = 0\n",
+    "    for i in range(1,100):\n",
+    "        sum(i**2)\n",
+    "        return sum \n",
+    "result = sum_nat_100() - first_100()\n",
+    "print(result)           "
    ]
   },
   {
@@ -221,24 +248,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[]\n",
       "None\n"
      ]
     }
    ],
    "source": [
-    "def prime_number():\n",
-    "    numbers = range(10002)\n",
-    "    for num in numbers:\n",
-    "        if i == numbers[::-1]:\n",
-    "            print(i)\n",
-    "result = prime_number()\n",
+    "def prime_number(x,y):\n",
+    "    x = 1\n",
+    "    y = 10001\n",
+    "    numbers =[]\n",
+    "    last_num =[]\n",
+    "    last_num == numbers[::-1]\n",
+    "    print(last_num)\n",
+    "result = prime_number(1,10001)\n",
     "print(result)       "
    ]
   },
@@ -258,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -272,10 +302,11 @@
    "source": [
     "def pit_trip():\n",
     "    for i in range(1, 1000):\n",
-    "        for j in range(i+1, 1000):\n",
-    "            h = (i**2 + j**2)**0.5\n",
-    "            if h.is_integer() and i + j + h == 1000:\n",
-    "                return int(i * j * h)\n",
+    "        for j in range(i, 1000):\n",
+    "            h = 1000 - i - j\n",
+    "            if h > 0:\n",
+    "                if i**2+j**2 == h**2:\n",
+    "                    return int(i * j * h)\n",
     "    return None\n",
     "result = pit_trip()\n",
     "print(result)"
@@ -293,14 +324,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "104743\n"
+      "104729\n"
      ]
     }
    ],
@@ -319,10 +350,10 @@
     "            primes.append(i)\n",
     "            count += 1\n",
     "            if count == n:\n",
-    "                return i\n",
+    "                return p\n",
     "        i += 1\n",
     "result = nth_prime(10001)\n",
-    "print(result)  # output: 104743"
+    "print(result) "
    ]
   },
   {
