--- a/exercises/project_euler_01.ipynb
+++ b/exercises/project_euler_01.ipynb
@@ -206,34 +206,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'int' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[36], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m             \u001b[39msum\u001b[39m(i\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m)\n\u001b[1;32m      9\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39msum\u001b[39m \n\u001b[0;32m---> 10\u001b[0m result \u001b[39m=\u001b[39m sum_nat_100() \u001b[39m-\u001b[39m first_100()\n\u001b[1;32m     11\u001b[0m \u001b[39mprint\u001b[39m(result)           \n",
-      "Cell \u001b[0;32mIn[36], line 8\u001b[0m, in \u001b[0;36msum_nat_100\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[39msum\u001b[39m \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m      7\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m,\u001b[39m100\u001b[39m):\n\u001b[0;32m----> 8\u001b[0m     \u001b[39msum\u001b[39;49m(i\u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49m\u001b[39m2\u001b[39;49m)\n\u001b[1;32m      9\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39msum\u001b[39m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5050\n",
+      "25502500\n",
+      "338350\n",
+      "25164150\n"
      ]
     }
    ],
    "source": [
-    "def first_100_nat():\n",
-    "    first_100 = []\n",
-    "for i in range(1, 100):\n",
-    "    i**2\n",
-    "def sum_nat_100():\n",
-    "    sum = 0\n",
-    "    for i in range(1,100):\n",
-    "        sum(i**2)\n",
-    "        return sum \n",
-    "result = sum_nat_100() - first_100()\n",
-    "print(result)           "
+    "def sum_100():\n",
+    "    sum_ = 0\n",
+    "    for i in range(0, 101):\n",
+    "        sum_ += i\n",
+    "    return sum_\n",
+    "result_sum = sum_100()\n",
+    "print(result_sum)\n",
+    "\n",
+    "squared_sum = result_sum**2\n",
+    "print(squared_sum)\n",
+    "\n",
+    "\n",
+    "def sum_squares():\n",
+    "    sum_square = 0\n",
+    "    for i in range(0,101):\n",
+    "        sum_square += i**2\n",
+    "    return sum_square\n",
+    "square_result = sum_squares()\n",
+    "print(square_result)\n",
+    "\n",
+    "difference_squared_sum = squared_sum - square_result\n",
+    "print(difference_squared_sum)"
    ]
   },
   {
@@ -404,7 +413,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16 (default, Jan 10 2023, 15:23:34) \n[GCC 9.4.0]"
+   "version": "3.8.16"
   },
   "orig_nbformat": 4,
   "vscode": {
