--- a/exercises/functions session 2 23022023.ipynb
+++ b/exercises/functions session 2 23022023.ipynb
@@ -10,12 +10,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-    "# your code here"
+    "# your code here\n",
+    "print(max(numbers))"
    ]
   },
   {
@@ -180,12 +189,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9 (tags/v3.10.9:1dd9be6, Dec  6 2022, 20:01:21) [MSC v.1934 64 bit (AMD64)]"
+   "version": "3.8.16"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f7a5be651532581cb44625d52e18aa1d390cab54bc6b51099d8c30bea9b68219"
+    "hash": "9ac03a0a6051494cc606d484d27d20fce22fb7b4d169f583271e11d5ba46a56e"
    }
   }
  },
