Add solution for function 2

--- a/exercises/functions session 2 23022023.ipynb
+++ b/exercises/functions session 2 23022023.ipynb
@@ -37,12 +37,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "string = \"Hello, world!\"\n",
-    "# your code here"
+    "# your code here\n",
+    "count_v = len([char for char in string if char in \"aeiouAEIOU\"])\n",
+    "print(count_v)"
    ]
   },
   {
