solution to function 3

--- a/exercises/functions session 2 23022023.ipynb
+++ b/exercises/functions session 2 23022023.ipynb
@@ -65,12 +65,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'accorn']\n"
+     ]
+    }
+   ],
    "source": [
-    "strings = [\"apple\", \"banana\", \"cherry\", \"date\"]\n",
-    "# your code here"
+    "strings = [\"apple\", \"banana\", \"cherry\", \"date\", \"accorn\"]\n",
+    "# your code here\n",
+    "def first_letter(input_list):\n",
+    "    strings_ = []\n",
+    "    for s in strings:\n",
+    "        if s.startswith(\"a\"):\n",
+    "            strings_.append(s)\n",
+    "    return strings_\n",
+    "result = first_letter(strings)\n",
+    "print(result)            \n"
    ]
   },
   {
