solution to function 4

--- a/exercises/functions session 2 23022023.ipynb
+++ b/exercises/functions session 2 23022023.ipynb
@@ -99,12 +99,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'t': 4, 'h': 1, 'i': 2, 's': 4, ' ': 4, 'a': 1, 'e': 4, 'n': 2, 'c': 1}\n"
+     ]
+    }
+   ],
    "source": [
     "sentence = \"this is a test sentence\"\n",
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "def word_count(input_list):\n",
+    "    sentence_ = {}\n",
+    "    for s in sentence:\n",
+    "            if s in sentence_:\n",
+    "                sentence_[s] += 1\n",
+    "            else:\n",
+    "                sentence_[s] = 1\n",
+    "    return sentence_    \n",
+    "result = word_count(sentence)\n",
+    "print(result)"
    ]
   },
   {
