--- a/exercises/functions session 2 23022023.ipynb
+++ b/exercises/functions session 2 23022023.ipynb
@@ -136,13 +136,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8]\n"
+     ]
+    }
+   ],
    "source": [
     "list1 = [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
     "list2 = [2, 4, 6, 8, 10, 12, 14, 16, 18]\n",
-    "# your code here"
+    "# your code here\n",
+    "def common_list(input_list1, input_list2):\n",
+    "    common_list = []\n",
+    "    for i in input_list1:\n",
+    "        for j in input_list2:\n",
+    "            if i == j:\n",
+    "                common_list.append(i)\n",
+    "    return common_list \n",
+    "result = common_list(list1,list2)\n",
+    "print(result)\n"
    ]
   },
   {
