Add solution to function 6

--- a/exercises/functions session 2 23022023.ipynb
+++ b/exercises/functions session 2 23022023.ipynb
@@ -172,12 +172,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 5, 7, 11, 13]\n"
+     ]
+    }
+   ],
    "source": [
     "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]\n",
-    "# your code here"
+    "# your code here\n",
+    "def prime_only(input_list):\n",
+    "    prime_numbers = []\n",
+    "    for i in input_list:\n",
+    "        if i >1:\n",
+    "            for j in range(2, i):\n",
+    "                if (i % j) == 0:\n",
+    "                    break\n",
+    "            else:\n",
+    "                prime_numbers.append(i)\n",
+    "    return prime_numbers\n",
+    "result = prime_only(numbers)\n",
+    "print(result)            \n"
    ]
   },
   {
