Add solution for function 7

--- a/exercises/functions session 2 23022023.ipynb
+++ b/exercises/functions session 2 23022023.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -210,13 +210,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "string = \"Write a program that takes a string\"\n",
+    "# your code here\n",
+    "print(len(string.split(\" \")))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "string = \"Write a program that takes a string\"\n",
-    "# your code here"
-   ]
+   "source": []
   },
   {
    "attachments": {},
