Add solution to function 8

--- a/exercises/functions session 2 23022023.ipynb
+++ b/exercises/functions session 2 23022023.ipynb
@@ -244,12 +244,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['madam', 'level', 'civic']\n"
+     ]
+    }
+   ],
    "source": [
     "strings = [\"madam\", \"level\", \"civic\"]\n",
-    "# your code here"
+    "# your code here\n",
+    "def palindrome_list(input_list):\n",
+    "    palindromes_ =[]\n",
+    "    for i in input_list:\n",
+    "        if i == i[::-1]:\n",
+    "            palindromes_.append(i)\n",
+    "    return palindromes_\n",
+    "result = palindrome_list(strings)\n",
+    "print(result)           "
    ]
   },
   {
