Add final solution to last function and cleaned code

--- a/exercises/Session 2 exercises 22022023.ipynb
+++ b/exercises/Session 2 exercises 22022023.ipynb
@@ -1,19 +1,9 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 31,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2882489794.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[31], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    Exercise 1: Write a program which repeatedly reads numbers until the\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
    "source": [
     "Exercise 1: Write a program which repeatedly reads numbers until the\n",
     "user enters `done`. Once `done` is entered, print out the total, count,\n",
