--- a/exercises/project_euler_01.ipynb
+++ b/exercises/project_euler_01.ipynb
@@ -25,13 +25,25 @@
    ],
    "source": [
     "def sum_even():\n",
+    "    # Create an empty list to store multiples of 3 or 5\n",
     "    multiples = []\n",
+    "    # Initialize a variable to store the sum of even numbers\n",
     "    even_sum = 0\n",
+    "    # Loop through all numbers from 0 to 999 (exclusive)\n",
     "    for i in range(1000):\n",
+    "        # Check if the number is a multiple of 3 or 5\n",
     "        if i % 3 == 0 or i % 5 == 0:\n",
-    "            even_sum += i\n",
+    "            # If the number is a multiple, add it to the list of multiples\n",
+    "            multiples.append(i)\n",
+    "            # If the number is even, add it to the sum of even numbers\n",
+    "            if i % 2 == 0:\n",
+    "                even_sum += i\n",
+    "    # Return the sum of even numbers\n",
     "    return even_sum\n",
-    "print(sum_even())       "
+    "\n",
+    "# Print the result of the sum_even function\n",
+    "print(sum_even())\n",
+    "  "
    ]
   },
   {
@@ -61,18 +73,18 @@
    ],
    "source": [
     "def fib_finder():\n",
-    "    a = 1\n",
-    "    b = 2\n",
-    "    sum = 0\n",
+    "    a = 1  # initialize the first term of the Fibonacci sequence\n",
+    "    b = 2  # initialize the second term of the Fibonacci sequence\n",
+    "    sum = 0  # initialize the sum of even terms to be zero\n",
     "\n",
-    "while b <= 4000000:\n",
-    "    if b % 2 == 0:\n",
-    "        sum += b\n",
-    "    c = a + b\n",
-    "    a = b\n",
-    "    b = c\n",
+    "while b <= 4000000:  # loop while the current term is less than or equal to 4 million\n",
+    "    if b % 2 == 0:  # check if the current term is even\n",
+    "        sum += b  # if the current term is even, add it to the sum of even terms\n",
+    "    c = a + b  # calculate the next term of the Fibonacci sequence by adding the previous two terms\n",
+    "    a = b  # update the previous term to be the current term\n",
+    "    b = c  # update the current term to be the next term\n",
     "\n",
-    "print(sum)"
+    "print(sum)  # print the sum of even terms\n"
    ]
   },
   {
@@ -221,27 +233,42 @@
     }
    ],
    "source": [
+    "# This function calculates the sum of all numbers from 0 to 100, inclusive.\n",
     "def sum_100():\n",
     "    sum_ = 0\n",
     "    for i in range(0, 101):\n",
     "        sum_ += i\n",
     "    return sum_\n",
+    "\n",
+    "# Call the sum_100 function and store the result in the variable result_sum.\n",
     "result_sum = sum_100()\n",
+    "\n",
+    "# Print the result of the sum_100 function.\n",
     "print(result_sum)\n",
     "\n",
+    "# Calculate the square of the result of the sum_100 function and store it in the variable squared_sum.\n",
     "squared_sum = result_sum**2\n",
+    "\n",
+    "# Print the squared_sum.\n",
     "print(squared_sum)\n",
     "\n",
-    "\n",
+    "# This function calculates the sum of the squares of all numbers from 0 to 100, inclusive.\n",
     "def sum_squares():\n",
     "    sum_square = 0\n",
     "    for i in range(0,101):\n",
     "        sum_square += i**2\n",
     "    return sum_square\n",
+    "\n",
+    "# Call the sum_squares function and store the result in the variable square_result.\n",
     "square_result = sum_squares()\n",
+    "\n",
+    "# Print the result of the sum_squares function.\n",
     "print(square_result)\n",
     "\n",
+    "# Calculate the difference between the squared_sum and square_result and store it in the variable difference_squared_sum.\n",
     "difference_squared_sum = squared_sum - square_result\n",
+    "\n",
+    "# Print the difference_squared_sum.\n",
     "print(difference_squared_sum)"
    ]
   },
@@ -270,15 +297,41 @@
     }
    ],
    "source": [
-    "def prime_number(x,y):\n",
-    "    x = 1\n",
-    "    y = 10001\n",
-    "    numbers =[]\n",
-    "    last_num =[]\n",
-    "    last_num == numbers[::-1]\n",
-    "    print(last_num)\n",
-    "result = prime_number(1,10001)\n",
-    "print(result)       "
+    "def nth_prime(n):\n",
+    "    # Initialize an empty list to store prime numbers\n",
+    "    primes = []\n",
+    "    # Initialize a counter to keep track of the number of primes found\n",
+    "    count = 0\n",
+    "    # Start checking for prime numbers from 2 (the first prime number)\n",
+    "    i = 2\n",
+    "    \n",
+    "    # Keep checking for prime numbers indefinitely until the nth prime is found\n",
+    "    while True:\n",
+    "        # Assume that the current number (i) is prime until proven otherwise\n",
+    "        is_prime = True\n",
+    "        \n",
+    "        # Check if i is divisible by any previously found prime number\n",
+    "        for p in primes:\n",
+    "            if i % p == 0:\n",
+    "                # If i is divisible by p, then it is not a prime number\n",
+    "                is_prime = False\n",
+    "                break\n",
+    "        \n",
+    "        # If i is a prime number, add it to the list of primes and increment the counter\n",
+    "        if is_prime:\n",
+    "            primes.append(i)\n",
+    "            count += 1\n",
+    "            \n",
+    "            # If the nth prime has been found, return it and exit the function\n",
+    "            if count == n:\n",
+    "                return p\n",
+    "        \n",
+    "        # Increment i to check the next number\n",
+    "        i += 1\n",
+    "\n",
+    "# Find the 10001st prime number and print the result\n",
+    "result = nth_prime(10001)\n",
+    "print(result)\n"
    ]
   },
   {
@@ -309,16 +362,27 @@
     }
    ],
    "source": [
+    "# Define a function named pit_trip\n",
     "def pit_trip():\n",
+    "    # Loop over values of i from 1 to 999\n",
     "    for i in range(1, 1000):\n",
+    "        # Loop over values of j from i to 999\n",
     "        for j in range(i, 1000):\n",
+    "            # Calculate the value of the third side, h, of the right-angled triangle\n",
     "            h = 1000 - i - j\n",
+    "            # Check if h is greater than 0, otherwise it can't form a valid triangle\n",
     "            if h > 0:\n",
+    "                # Check if the triple (i, j, h) forms a Pythagorean triple\n",
     "                if i**2+j**2 == h**2:\n",
+    "                    # Return the product of the three sides if they form a Pythagorean triple\n",
     "                    return int(i * j * h)\n",
+    "    # If no Pythagorean triple is found, return None\n",
     "    return None\n",
+    "\n",
+    "# Call the function and store the result in a variable named result\n",
     "result = pit_trip()\n",
-    "print(result)"
+    "# Print the result\n",
+    "print(result)\n"
    ]
   },
   {
@@ -333,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -346,23 +410,40 @@
    ],
    "source": [
     "def nth_prime(n):\n",
+    "    # Initialize an empty list to store prime numbers\n",
     "    primes = []\n",
+    "    # Initialize a counter to keep track of the number of primes found\n",
     "    count = 0\n",
+    "    # Start checking for prime numbers from 2 (the first prime number)\n",
     "    i = 2\n",
+    "    \n",
+    "    # Keep checking for prime numbers indefinitely until the nth prime is found\n",
     "    while True:\n",
+    "        # Assume that the current number (i) is prime until proven otherwise\n",
     "        is_prime = True\n",
+    "        \n",
+    "        # Check if i is divisible by any previously found prime number\n",
     "        for p in primes:\n",
     "            if i % p == 0:\n",
+    "                # If i is divisible by p, then it is not a prime number\n",
     "                is_prime = False\n",
     "                break\n",
+    "        \n",
+    "        # If i is a prime number, add it to the list of primes and increment the counter\n",
     "        if is_prime:\n",
     "            primes.append(i)\n",
     "            count += 1\n",
+    "            \n",
+    "            # If the nth prime has been found, return it and exit the function\n",
     "            if count == n:\n",
     "                return p\n",
+    "        \n",
+    "        # Increment i to check the next number\n",
     "        i += 1\n",
+    "\n",
+    "# Find the 10001st prime number and print the result\n",
     "result = nth_prime(10001)\n",
-    "print(result) "
+    "print(result)\n"
    ]
   },
   {
@@ -394,7 +475,36 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def find_triangular_num(n):\n",
+    "    # Calculate the nth triangular number using the formula (n*(n+1))/2\n",
+    "    return int(n*(n+1)/2)\n",
+    "\n",
+    "def num_divisors(n):\n",
+    "    # Count the number of divisors of a given number n\n",
+    "    count = 0\n",
+    "    for i in range(1, int(n**0.5)+1):\n",
+    "        if n % i == 0:\n",
+    "            # If i divides n, add 2 to the count (i and n/i are divisors)\n",
+    "            if n/i == i:\n",
+    "                count += 1\n",
+    "            else:\n",
+    "                count += 2\n",
+    "    return count\n",
+    "\n",
+    "# Initialize variables\n",
+    "n = 1\n",
+    "divisors = 0\n",
+    "\n",
+    "# Find the first triangular number with over 500 divisors\n",
+    "while divisors <= 500:\n",
+    "    triangular_num = find_triangular_num(n)\n",
+    "    divisors = num_divisors(triangular_num)\n",
+    "    n += 1\n",
+    "\n",
+    "# Print the result\n",
+    "print(triangular_num)\n"
+   ]
   }
  ],
  "metadata": {
