add solution to caesar's cipher

--- a/exercises/Caesar Cipher.ipynb
+++ b/exercises/Caesar Cipher.ipynb
@@ -38,65 +38,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Message to decrypt:  QIIX QI FC XLI VSWI FYWLIW XSRMKLX\n",
+      "Decrypted message:  MEET ME BY THE ROSE BUSHES TONIGHT\n"
+     ]
+    }
+   ],
    "source": [
-    "key = [\"a\",\"b\",\"c\",\"d\",\"e\",\"f\",\"g\",\"h\",\"i\",\"j\",\"k\",\"l\",\"m\",\"n\",\"o\",\"p\",\"q\",\"r\",\"s\",\"t\",\"u\",\"v\",\"w\",\"x\",\"y\",\"z\"]\n",
-    "q = input(\"Do you want to (e)ncrypt or (d)ecrypt?\")\n",
-    "f_q = input(\"Please enter the key (0 to 25) to use:\")\n",
-    "m = input(\"Enter the message to decrypt:\")\n",
+    "# Prompt the user for inputs\n",
+    "q1 = input(\"Do you want to (e)ncrypt or (d)ecrypt?: \")\n",
+    "q2 = int(input(\"Please enter the key (0 to 25) to use: \"))\n",
+    "message = input(\"Enter the message: \")\n",
     "\n",
-    "def start():\n",
-    "    q_ = []\n",
-    "    f_q_ = []\n",
-    "    m_ = []\n",
+    "# Define the encrypt function\n",
+    "def encrypt(message, q2):\n",
+    "    cipher = ''\n",
+    "    if q1 == \"e\":  # check if user wants to encrypt\n",
+    "        for char in message:\n",
+    "            if char == ' ':  # preserve spaces\n",
+    "                cipher = cipher + char  \n",
+    "            elif char.isupper():  # handle uppercase letters\n",
+    "                cipher = cipher + chr((ord(char) + q2 - 65) % 26 + 65)\n",
+    "            else:  # handle lowercase letters\n",
+    "                cipher = cipher + chr((ord(char) + q2 - 97) % 26 + 97)\n",
+    "        return cipher.upper()\n",
     "\n",
-    "    while True:\n",
-    "        answer = input(\"Do you want to (e)ncrypt or (d)ecrypt?\")\n",
+    "# Define the decrypt function\n",
+    "def decrypt(message, q2):\n",
+    "    cipher = ''\n",
+    "    inverse_key = (26 - q2) % 26  # calculate the inverse key value for decryption\n",
+    "    if q1 == \"d\":  # check if user wants to decrypt\n",
+    "        for char in message:\n",
+    "            if char == ' ':  # preserve spaces\n",
+    "                cipher = cipher + char  \n",
+    "            elif char.isupper():  # handle uppercase letters\n",
+    "                cipher = cipher + chr((ord(char) - inverse_key - 65) % 26 + 65)\n",
+    "            else:  # handle lowercase letters\n",
+    "                cipher = cipher + chr((ord(char) - inverse_key - 97) % 26 + 97)\n",
+    "        return cipher\n",
     "\n",
-    "        if answer == 'e':\n",
-    "            print(f_q)\n",
-    "            print(m)\n",
-    "            m_ = m.split()\n",
-    "            if f_q == 1:\n",
-    "                for i in m_:\n",
-    "                    i =+1\n",
-    "                    \n",
-    "                \n",
-    "                for i in     \n",
-    "            break\n",
-    "        elif answer == 'd':\n",
-    "            print(m)\n",
-    "            break\n",
-    "        else:\n",
-    "            print(\"Not a valid input\")\n",
-    "            back_to_menu()\n",
-    "\n",
-    "def back_to_menu():\n",
-    "    \"\"\"\n",
-    "    A return to the main menu option that the user can use\n",
-    "    \"\"\"\n",
-    "    while True:\n",
-    "        user_selection = input(\"Do you want to (e)ncrypt or (d)ecrypt?\")\n",
-    "        if user_selection == \"e\" or user_selection == \"E\":\n",
-    "            encrypt()\n",
-    "            break\n",
-    "        elif user_selection == \"d\" or user_selection == \"D\":\n",
-    "            decrypt()\n",
-    "            break\n",
-    "        else:\n",
-    "            print(\"Invalid input, Try again\")\n",
-    "            back_to_menu()\n",
-    "            break\n",
-    "        return False\n",
-    "\n",
-    "\n",
-    "def main():\n",
-    "    \"\"\"\n",
-    "    Function that runs all functions\n",
-    "    \"\"\"\n",
-    "    start()"
+    "# Check if user wants to encrypt or decrypt, and perform the corresponding operation\n",
+    "if q1 == \"e\":\n",
+    "    print(\"Message to encrypt: \", message)\n",
+    "    print(\"Encrypted message: \", encrypt(message, q2))\n",
+    "elif q1 == \"d\":\n",
+    "    print(\"Message to decrypt: \", message)\n",
+    "    print(\"Decrypted message: \", decrypt(message, inverse_key))\n",
+    "else:\n",
+    "    print(\"Invalid input. Please enter 'e' to encrypt or 'd' to decrypt.\")\n"
    ]
   }
  ],
@@ -116,7 +111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16 (default, Jan 10 2023, 15:23:34) \n[GCC 9.4.0]"
+   "version": "3.8.16"
   },
   "orig_nbformat": 4,
   "vscode": {
