Add final classes exercises solutions

--- a/exercises/classes.ipynb
+++ b/exercises/classes.ipynb
@@ -93,10 +93,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting the car...\n",
+      "Stopping the car...\n",
+      "Starting the car...\n",
+      "Stopping the car...\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Car:\n",
+    "    def __init__(self, make, model, year):\n",
+    "        self.make = make\n",
+    "        self.model = model\n",
+    "        self.year = year\n",
+    "        self.is_running = False\n",
+    "\n",
+    "    def start_(self):\n",
+    "        if self.is_running:\n",
+    "            print(\"Car is already running!\")\n",
+    "        else:\n",
+    "            self.is_running = True\n",
+    "            print(\"Starting the car...\")\n",
+    "\n",
+    "    def stop_(self):\n",
+    "        if not self.is_running:\n",
+    "            print(\"Car is already stopped!\")\n",
+    "        else:\n",
+    "            self.is_running = False\n",
+    "            print(\"Stopping the car...\")\n",
+    "        \n",
+    "car_1 = Car(\"Audi\", \"A8\", 2008)\n",
+    "car_1.start_()\n",
+    "car_1.stop_()\n",
+    "car_1.start_()\n",
+    "car_1.stop_()                            "
+   ]
   },
   {
    "attachments": {},
@@ -108,10 +146,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "class Dice:\n",
+    "    def __init__(self, sides):\n",
+    "        self.sides = sides\n",
+    "    \n",
+    "\n",
+    "    def dice_roll(self):\n",
+    "        return random.randint(1, self.sides)\n",
+    "\n",
+    "d_1 = Dice(6)\n",
+    "d_1.dice_roll()        \n"
+   ]
   },
   {
    "attachments": {},
@@ -123,10 +184,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "68.0\n",
+      "293.15\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Temperature:\n",
+    "    def __init__(self, degrees):\n",
+    "        self.degrees = degrees\n",
+    "\n",
+    "\n",
+    "    def to_farenheit(self):\n",
+    "        farenheit_ = (self.degrees *9/5) +32\n",
+    "        print(farenheit_)  \n",
+    "\n",
+    "\n",
+    "    def to_kelvin(self):\n",
+    "        kelvin_ = self.degrees + 273.15\n",
+    "        print(kelvin_)\n",
+    "\n",
+    "temp_1 = Temperature(20)\n",
+    "temp_1.to_farenheit()\n",
+    "temp_1.to_kelvin()              "
+   ]
   },
   {
    "attachments": {},
@@ -138,10 +226,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This book has been published 18 years ago.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import date\n",
+    "todays_date = date.today()\n",
+    "current_year = todays_date.year \n",
+    "\n",
+    "class Book:\n",
+    "    def __init__(self, author, title, publishing_year):\n",
+    "        self.author = author\n",
+    "        self.title = title\n",
+    "        self.publishing_year = publishing_year\n",
+    "\n",
+    "    def get_age(self):\n",
+    "        age_ = current_year - self.publishing_year\n",
+    "        print(f\"This book has been published {age_} years ago.\")\n",
+    "\n",
+    "b_1 = Book(\"Viktor Frankl\", \"Man's search for meaning\", 2005)\n",
+    "b_1.get_age()    \n",
+    "\n"
+   ]
   },
   {
    "attachments": {},
@@ -153,10 +267,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rectangle with a width of 5 and a height of 4\n",
+      "Rectangle\n",
+      " width 5\n",
+      " height 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Rectangle:\n",
+    "    def __init__(self, width, height):\n",
+    "        self.height = height\n",
+    "        self.width = width\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        print(f\"Rectangle with a width of {self.width} and a height of {self.height}\")\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        print(f\"Rectangle\\n width {self.width}\\n height {self.height}\")\n",
+    "\n",
+    "r_2 = Rectangle(5,4)\n",
+    "r_2.__str__()\n",
+    "r_2.__repr__()"
+   ]
   }
  ],
  "metadata": {
